# mimic

./: .oxfmtrc.json  .oxlintrc.json  LICENSE  README.md  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
mimic/: __main__.py  cli.py  client.py  daemon.py  devices.py  geometry.py  keymap.py  protocol.py  screen.py
src/: cli.ts  codes.ts  desktop.ts  hands.ts  index.ts  selftest.ts  service.ts  sys.ts  system.ts  uinput.ts  window.ts
tests/: cli.test.ts  codes.test.ts  desktop.test.ts  hands.test.ts  protocol.test.ts  selftest.test.ts  window.test.ts
